--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -56,8 +56,8 @@ jobs:
           plugin_habits_languages_limit: 8
           plugin_habits_languages_threshold: 0%
           repositories_forks: yes
-          plugin_pagespeed: yes
-          plugin_pagespeed_url: https://reallinshengxiang.github.io/
+          #plugin_pagespeed: yes
+          #plugin_pagespeed_url: https://reallinshengxiang.github.io/
           plugin_achievements: yes
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
