--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -25,7 +25,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
-          user: reallinshengxiang
+          user: Shengxiang-Lin
           template: classic
           base: header, activity, community, repositories, metadata
           config_display: large
