--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -58,10 +58,10 @@ jobs:
           repositories_forks: yes
           #plugin_pagespeed: yes
           #plugin_pagespeed_url: https://reallinshengxiang.github.io/
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
+          #plugin_achievements: yes
+          #plugin_achievements_display: detailed
+          #plugin_achievements_secrets: yes
+          #plugin_achievements_threshold: C
           plugin_fortune: yes
           #plugin_followup: yes
          # plugin_followup_archived: yes
