--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -67,3 +67,8 @@ jobs:
          # plugin_followup_archived: yes
          # plugin_followup_indepth: yes
           #plugin_followup_sections: repositories
+          plugin_stargazers: yes
+          plugin_stargazers_charts: yes
+          plugin_stargazers_charts_type: classic
+          plugin_stargazers_days: 14
+          plugin_stargazers_worldmap: yes
