--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - uses: stalomeow/metrics@projects-v2
         with:
           # Your GitHub token
           # The following scopes are required:
@@ -60,8 +60,8 @@ jobs:
           #plugin_pagespeed_url: https://reallinshengxiang.github.io/
           #plugin_achievements: yes
           #plugin_achievements_display: detailed
-          #plugin_achievements_secrets: yes
-          #plugin_achievements_threshold: C
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
           plugin_fortune: yes
           #plugin_followup: yes
          # plugin_followup_archived: yes
