--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -63,10 +63,10 @@ jobs:
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
           plugin_fortune: yes
-          #plugin_followup: yes
-         # plugin_followup_archived: yes
-         # plugin_followup_indepth: yes
-          #plugin_followup_sections: repositories
+          plugin_followup: yes
+          plugin_followup_archived: yes
+          plugin_followup_indepth: yes
+          plugin_followup_sections: repositories
           plugin_stargazers: yes
           plugin_stargazers_charts: yes
           plugin_stargazers_charts_type: classic
