--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -43,8 +43,8 @@ jobs:
           plugin_habits_trim: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: B
+          #plugin_achievements: yes
+          #plugin_achievements_display: detailed
+          #plugin_achievements_secrets: yes
+          #plugin_achievements_threshold: B
           plugin_fortune: yes
